; ModuleID = '/home/carl/AnghaBench/linux/fs/ceph/extr_cache.c_ceph_readpage_from_fscache_complete.c'
source_filename = "/home/carl/AnghaBench/linux/fs/ceph/extr_cache.c_ceph_readpage_from_fscache_complete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.page*, i8*, i32)* @ceph_readpage_from_fscache_complete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ceph_readpage_from_fscache_complete(%struct.page* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.page*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.page* %0, %struct.page** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %3
  %10 = load %struct.page*, %struct.page** %4, align 8
  %11 = call i32 @SetPageUptodate(%struct.page* %10)
  br label %12

12:                                               ; preds = %9, %3
  %13 = load %struct.page*, %struct.page** %4, align 8
  %14 = call i32 @unlock_page(%struct.page* %13)
  ret void
}

declare dso_local i32 @SetPageUptodate(%struct.page*) #1

declare dso_local i32 @unlock_page(%struct.page*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
